--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.1"
+    "express": "^4.16.1",
+    "lodash": "^4.17.21"
   }
 }
