--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.16.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "morgan": "^1.10.0"
   }
 }
