--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.9",
     "express": "^4.16.1",
     "lodash": "^4.17.21",
+    "mongoose": "^7.5.0",
     "morgan": "^1.10.0"
   }
 }
