--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.1",
     "lodash": "^4.17.21",
     "mongoose": "^7.5.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.1"
   }
 }
